List item margins

--- a/template/archive.njk
+++ b/template/archive.njk
@@ -31,7 +31,7 @@
 
   <hr />
 
-  <p><small>This is a work in progress&hellip;</small></p>
+  <p><small>This listing is a work in progress&hellip;</small></p>
 
   <ul class="article-tree">
     <li data-entity-type="folder">
