--- a/template/archive.njk
+++ b/template/archive.njk
@@ -1,10 +1,16 @@
 {% extends "base.njk" %}
 
 {% block main %}
+
   {% macro drawList(entity) %}
-    <li data-entity-type="{{ entity.Type }}">
+    {% set type = "article" %}
+    {% if entity.IsFolder == true %}
+      {% set type = "folder" %}
+    {% endif %}
+
+    <li data-entity-type="{{ type }}">
       <a href="{{ entity.URI }}" title="Go to {{ entity.Title }}">
-      {% if entity.Type == "article" %}
+      {% if type == "article" %}
         {{ entity.Title }}
       {% else %}
         <strong>{{ entity.Title }}</strong>
@@ -31,8 +37,6 @@
 
   <hr />
 
-  <p><small>This listing is a work in progress&hellip;</small></p>
-
   <ul class="article-tree">
     <li data-entity-type="folder">
       <a href="/ROOT" title="See article root">
@@ -40,10 +44,12 @@
           Root
         </strong>
       </a>
+      <ul>
+      {% for entity in tree %}
+        {{ drawList(entity) }}
+      {% endfor %}
+      </ul>
     </li>
-    {% for entity in tree.Children %}
-      {{ drawList(entity) }}
-    {% endfor %}
   </ul>
 {% endblock main %}
 
