--- a/template/archive.njk
+++ b/template/archive.njk
@@ -35,9 +35,7 @@
 
   <ul data-content="results"></ul>
 
-  <hr />
-
-  <ul class="article-tree">
+  <ul data-content="tree">
     <li data-entity-type="folder">
       <a href="/ROOT" title="See article root">
         <strong>
