--- a/template/css/styles.css
+++ b/template/css/styles.css
@@ -410,19 +410,55 @@ ul[data-content="results"] li:not(:last-child) {
   padding: calc(var(--root-spacing) * 6) 0;
 }
 
-.article-tree,
-.article-tree ul {
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+.random header nav ul li a[href="/random"] {
+  animation: rotation 4s infinite cubic-bezier(1, 2.5, 0, 1.5);
+  background-color: var(--color-highlight);
+}
+.random main {
+  text-align: center;
+}
+.random main div {
+  background-color: var(--color-highlight);
+  width: 15em;
+  height: 15em;
+  margin: calc(var(--root-spacing) * 4) auto;
+
+  background-color: var(--color-highlight);
+
+  mask-repeat: no-repeat;
+  mask-position: center;
+  -webkit-mask-image: url(/img/twenty-die.svg);
+  mask-image: url(/img/twenty-die.svg);
+
+  animation: rotation 4s infinite cubic-bezier(1, 2.5, 0, 1.5);
+}
+
+ul[data-content="tree"],
+ul[data-content="tree"] ul {
   list-style-type: none;
-  font-size: var(--font-size-small);
 }
-.article-tree {
-  padding: 0;
+ul[data-content="tree"] {
+  padding: var(--root-spacing) 0;
   margin-top: var(--root-spacing);
+  border-top: 1px dotted var(--color-light);
 }
-.article-tree li {
+ul[data-content="tree"] li {
   margin: 0;
 }
-.article-tree li[data-entity-type="article"]::before {
+ul[data-content="tree"] li ul li ul {
+  border-left: 2px solid var(--color-light);
+  margin-left: 0.4em;
+}
+
+ul[data-content="tree"] li[data-entity-type="article"]::before {
   content: "";
   width: 1.25em;
   height: 1.25em;
@@ -432,7 +468,7 @@ ul[data-content="results"] li:not(:last-child) {
   -webkit-mask-image: url(/img/angle.svg);
   mask-image: url(/img/angle.svg);
 }
-.article-tree li[data-entity-type="folder"]::before {
+ul[data-content="tree"] li[data-entity-type="folder"]::before {
   content: "";
   width: 1em;
   height: 1em;
@@ -443,11 +479,11 @@ ul[data-content="results"] li:not(:last-child) {
   -webkit-mask-image: url(/img/folder.svg);
   mask-image: url(/img/folder.svg);
 }
-.article-tree li[data-entity-type="article"] {
+ul[data-content="tree"] li[data-entity-type="article"] {
   display: grid;
-  grid-template-columns: 1.25em auto;
+  grid-template-columns: 1.5em auto;
 }
-.article-tree li[data-entity-type="folder"] {
+ul[data-content="tree"] li[data-entity-type="folder"] {
   margin: calc(var(--root-spacing) / 2) 0;
 }
 
