--- a/template/revision-raw.njk
+++ b/template/revision-raw.njk
@@ -4,9 +4,7 @@
   {% include "hierarchy.njk" %}
 
   <h1>
-    {{ title }}
-    <br />
-    <span>Revision {{ revision.ShortId }}</span> <span>{{ revision.Date | date:"Monday, 2 January 2006 at 15:04 MST" }}</span>
+    {{ title }} <span>Revision</span> <span>as of {{ revision.Date | date:"Monday, 2 January 2006 at 15:04 MST" }}</span>
   </h1>
 
   <pre>
