--- a/template/hierarchy.njk
+++ b/template/hierarchy.njk
@@ -17,6 +17,12 @@
     <li><span>Revision {{ revision.ShortId }}</span></li>
     {% endif %}
 
+    {% if type == "revision-raw" %}
+    <li><a data-entity-type="revision-list" href="{{ uri }}/revisions" title="Article revisions">Revisions</a></li>
+    <li><a data-entity-type="revision" href="{{ uri }}/revisions/{{ revision.ShortId }}" title="View revision {{ revision.ShortId }}">Revision {{ revision.ShortId }}</a></li>
+    <li><span>Raw</span></li>
+    {% endif %}
+
     {% if type == "revision-list" %}
     <li><span>Revisions</span></li>
     {% endif %}
