--- a/template/base.njk
+++ b/template/base.njk
@@ -104,7 +104,7 @@
         <ul>
           {% block footerElements %}{% endblock footerElements %}
           <li>
-            <a href="https://github.com/afreeorange/node-bock" title="Link to this project on Github">bock {{ version }}</a>
+            <a href="https://github.com/afreeorange/bock" title="View the project that generates this wiki on Github">bock {{ version }}</a>
           </li>
         </ul>
       </footer>
