Fix folder listing

--- a/template/article-raw.njk
+++ b/template/article-raw.njk
@@ -3,10 +3,7 @@
 {% block main %}
   {% include "hierarchy.njk" %}
 
-  <h1>
-    {{ title }}
-    <span>Raw</span>
-  </h1>
+  <h1>{{ title }} <span>Raw</span></h1>
 
 <pre><code>{{ source | safe }}</code></pre>
 {% endblock main %}
