--- a/template/not-found.njk
+++ b/template/not-found.njk
@@ -1,7 +1,8 @@
 {% extends "base.njk" %}
-
 {% block main %}
   <h1>I'm sorry I could not find that :/</h1>
-
-  <p>You can <a href="/Home" title="Go to the home page">go home</a> or <a href="/archive" title="Search the Archive">search the archive</a>.</p>
+  <p>You can
+    <a href="/Home" title="Go to the home page">go home</a>
+    or
+    <a href="/archive" title="Search the Archive">search the archive</a>.</p>
 {% endblock main %}
