--- a/template/article.njk
+++ b/template/article.njk
@@ -1,13 +1,13 @@
 {% extends "base.njk" %}
-
 {% block main %}
   {% include "hierarchy.njk" %}
-
-  <h1>{{ title }} {% if meta.GenerateRevisions and untracked %}<span>Untracked</span>{% endif %}</h1>
-
+  <h1>{{ title }}
+    {% if meta.GenerateRevisions and untracked %}
+      <span>Untracked</span>
+    {% endif %}
+  </h1>
   {{ html | safe }}
 {% endblock main %}
-
 {% block footerElements %}
   <li>{{ sizeInBytes }} bytes</li>
   {% if not untracked %}
@@ -15,7 +15,8 @@
     <li>Modified on {{ modified | date:"Monday, 2 January 2006 at 15:04 MST" }}</li>
   {% endif %}
 {% endblock footerElements %}
-
 {% block statistics %}
-  There are {{ meta.ArticleCount }} articles and {{ meta.RevisionCount }} revisions in this wiki. It took {{ meta.GenerationTimeRounded }} to generate it on a {{ meta.CPUCount }}-core {{ meta.Platform }}/{{ meta.Architecture }} system with {{ meta.MemoryInGB }}GiB RAM on {{ meta.BuildDate | date:"Monday, 2 January 2006 at 15:04 MST" }}
+  There are {{ meta.ArticleCount }} articles and {{ meta.RevisionCount }} revisions in this wiki. It took
+  {{ meta.GenerationTimeRounded }} to generate it on a {{ meta.CPUCount }}-core
+  {{ meta.Platform }}/{{ meta.Architecture }} system with {{ meta.MemoryInGB }}GiB RAM on {{ meta.BuildDate | date:"Monday, 2 January 2006 at 15:04 MST" }}
 {% endblock statistics %}
