--- a/template/index.njk
+++ b/template/index.njk
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/Home" />
+    <meta http-equiv="refresh" content="0; url=/Home"/>
     <title>Redirect</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css"/>
     <style type="text/css">
       body {
         flex-direction: column;
@@ -23,9 +23,7 @@
   </head>
   <body>
     <p>
-      <a href="/Home" title="Go to the homepage"
-        >Click if you are not redirected</a
-      >
+      <a href="/Home" title="Go to the homepage">Click if you are not redirected</a>
     </p>
   </body>
 </html>
