Fix bug in script tag

--- a/template/base.njk
+++ b/template/base.njk
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="/css/styles.css"/>
     <link rel="stylesheet" href="/css/highlight.css"/>
     <title>{{ title }} &ndash; Nikhil's Personal Wiki</title>
-    <script type="text/javascript" id="MathJax-script" defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-      <script defer data-domain="wiki.nikhil.io" src="https://plausible.io/js/plausible.js"></script>
+    <script type="text/javascript" id="MathJax-script" defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+    <script defer data-domain="wiki.nikhil.io" src="https://plausible.io/js/plausible.js"></script>
     </head>
     <body>
       <noscript>
