--- a/template/article.njk
+++ b/template/article.njk
@@ -16,7 +16,7 @@
   {% endif %}
 {% endblock footerElements %}
 {% block statistics %}
-  There are {{ meta.ArticleCount }} articles and {{ meta.RevisionCount }} revisions in this wiki. It took
+  There are {{ meta.ArticleCount }} articles{% if meta.GenerateRevisions %} and {{ meta.RevisionCount }} revisions{% endif %} in this wiki. It took
   {{ meta.GenerationTimeRounded }} to generate it on a {{ meta.CPUCount }}-core
   {{ meta.Platform }}/{{ meta.Architecture }} system with {{ meta.MemoryInGB }}GiB RAM on {{ meta.BuildDate | date:"Monday, 2 January 2006 at 15:04 MST" }}
 {% endblock statistics %}
